--- a/package.json
+++ b/package.json
@@ -10,9 +10,9 @@
     "react": "^16.14.0",
     "react-dom": "^16.14.0",
     "react-redux": "^7.2.2",
-    "react-redux-firebase": "^3.8.1",
+    "react-redux-firebase": "^3.9.0",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "3.4.0",
+    "react-scripts": "^4.0.1",
     "redux": "^4.0.5",
     "redux-devtools-extension": "^2.13.8",
     "redux-firestore": "^0.13.0",
